# YA-BU

./: Cargo.toml  README.md  main.py  requirements.txt
ai_security/: __init__.py  adaptive_defense.py  feedback_loop.py  knowledge_base.py  self_learning_engine.py  threat_detection.py
api/: rest_api.py  websocket_server.py
core/blockchain/: __init__.py  block.rs  blockchain_core.rs  chain.rs
core/consensus/: __init__.py  hybrid_consensus.py
core/language/: satoshi_lang.py
core/network/: gossip_protocol.py  p2p_node.py  sync_manager.py
core/runtime/: __init__.py  lock_free.rs
core/storage/: leveldb_store.py  mempool.py  state_trie.py
core/vm/: bytecode_compiler.py  gas_meter.py  satoshi_vm.py
docs/: ARCHITECTURE.md  CONSENSUS_DESIGN.md  LANGUAGE_SPEC.md
examples/: hello_satoshi.sl  smart_contract.sl
satoshi-core/: Cargo.toml
satoshi-core/src/: blockchain_core.rs  chain.rs  concurrent_runtime.rs  lib.rs  main.rs  scheduler.rs
tests/: monitoring_dashboard.py  performance_benchmark.py  run_tests.py  test_simulation.py  threat_scenarios.py
ui/: index.html  manifest.json
