[package]
name = "satoshi-core"
version = "0.1.0"
edition = "2021"
description = "SatoshiOS blockchain core — Rust components"

[[bin]]
name = "satoshi-core"
path = "src/main.rs"

[lib]
name = "satoshi_core"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
crossbeam-epoch = "0.9"
crossbeam-deque = "0.8"
